Bug 377553 - regression: error dialog when server can not be reached
Summary: regression: error dialog when server can not be reached
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: POP3 Resource (other bugs)
Version First Reported In: 4.13
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-13 08:23 UTC by Martin Koller
Modified: 2017-04-16 08:59 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2017-03-13 08:23:20 UTC
Since the latest update (openSuse 42.2 updated to latest KDE, now using 16.12.3)
the POP resource (I assume) shows a dialog whenever the POP Server can not be contacted - which is here always the case when
- I use the company VPN
- I'm inside the company network, which blocks outgoing POP port requests

The dialog shows:
"Unable to login to the server securemail.a1.net.
Timeout on server
securemail.a1.net: Socket operation timed out"

In previous KDE Version (16.08) no error dialog was thrown at the user, and the problem was silently ignored in the background.

Please restore the previous behavior. A background resource should not throw a dialog onto the user but behave silent in this case.
It should simply retry and it will be successful again when the network is again reachable.
Comment 1 Albert Astals Cid 2017-03-13 08:25:39 UTC
I disagree, there's often very important messages coming though like:
 "You need to login in the webpage first because we are weird like that"
errors that google and yahoo like creating.
Comment 2 Martin Koller 2017-03-13 16:40:02 UTC
you disagree with that's annoying to dismiss a dialog every 5 minutes because I'm in a network which does not allow to reach a POP server ?
Then why don't you disagree with the fact that this seems only be done with POP, but not with IMAP or WebDav ?
If that information is now so super important (why was it not that important in the last few versions?), then at least please use a passive notification instead of the disturbing dialog I need to click at.
Comment 3 Martin Koller 2017-04-16 08:59:41 UTC
Git commit fb1777eb22de6971b01f349867d4b6cff7ac8658 by Martin Koller.
Committed on 16/04/2017 at 08:58.
Pushed by mkoller into branch 'master'.

Don't block users work with a message box on download error

Instead of blocking users work with a MessageBox dialog, just display
the error via the KDE Notification framework.
REVIEW: 130074

M  +2    -1    CMakeLists.txt
M  +2    -0    resources/pop3/CMakeLists.txt
A  +8    -0    resources/pop3/akonadi_pop3_resource.notifyrc
M  +3    -1    resources/pop3/pop3resource.cpp

https://commits.kde.org/kdepim-runtime/fb1777eb22de6971b01f349867d4b6cff7ac8658