Don't block users work with a message box on download error

Instead of blocking users work with a MessageBox dialog, just display
the error via the KDE Notification framework.

BUG: 377553
REVIEW: 130074